objects/Product2Addon__c.object
<CustomObject>
    <description>Stores addons related to base products</description>
    <fields>
        <fullName>Addon_Product_Code__c</fullName>
        <description>we will load add on product codes</description>
        <label>Addon Product Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product2Addons</relationshipLabel>
        <relationshipName>Product2Addons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product2Addon</label>
    <nameField>
        <displayFormat>PAO - {0000000}</displayFormat>
        <label>Product2Addons Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product2Addons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>